Svg alignment fix number 115

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -31,8 +31,9 @@ h4
     font-weight: 400
 
 i
-    vertical-align: middle
+    font-family: sans-serif
     line-height: 1
+    vertical-align: middle
 
     svg
         height: 1em
